--- a/src/problems/1dphase/Makefile.am
+++ b/src/problems/1dphase/Makefile.am
@@ -11,14 +11,15 @@ BASEDIR=../../../dune/fem/main
 
 SOURCES = $(BASEDIR)/phasefield.cc $(BASEDIR)/phasefield_pol.cc
 
-#GRIDTYPE = ALUGRID
+#GRIDTYPE = ALUGRID_CUBE
+#GRIDTYPE = ALUGRID_SIMPLEX
 GRIDTYPE = SPGRID
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM = 1 
-POLORDER= 0 
-USEJACOBIAN=1
+GRIDDIM = 2
+POLORDER = 2 
+USEJACOBIAN = 0
 
-PROBLEM = 5 # check ./problemtype.hh
+PROBLEM = 1 # check ./problemtype.hh
 FLUX = 1 # check ./problemcreator.hh
 
 AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) \
@@ -28,14 +29,14 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 
 check_PROGRAMS = phasefield phasefield_P0 phasefield_nc phasefield_nctheta phasefield_nc_jac phasefield2d phasefield2dnc
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMYALGO -DMASTER 
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMYALGO -DMASTER -DPROJECT 
 
 phasefield_P0_SOURCES = $(SOURCES) 
 phasefield_P0_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=0 -DMYALGO -DMASTER 
 
 
 phasefield_nc_SOURCES = $(SOURCES) 
-phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=0 -DWELLBALANCED -DMYALGO -DMASTER
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DMYALGO -DMASTER 
 
 phasefield_nctheta_SOURCES = $(SOURCES) 
 phasefield_nctheta_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=0 -DWELLBALANCED -DMYALGO -DMASTER -DTHETASOURCE
