adding headers in Makefile.am, small change in flux.hh

--- a/dune/fem/operator/assembled/Makefile.am
+++ b/dune/fem/operator/assembled/Makefile.am
@@ -1,18 +1,20 @@
 # install these headers
 assembleddir=$(top_srcdir)/dune/fem/operator/assembled
-assembled_HEADERS=phasefieldfilter.hh mixedoperator.hh model.hh
+assembled_HEADERS=phasefieldfilter.hh mixedoperator.hh energyconverter.hh flux.hh model.hh
+
+
 
 #USE_OMP=-fopenmp
 
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS) $(LOCAL_LIBS) $(DUNEMPILDFLAGS) $(DUNEMPILIBS) 
 
 
-SOURCES = filtertest.cc 
+TESTSOURCES = filtertest.cc 
 
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 
 check_PROGRAMS = filtertest
-filtertest_SOURCES = $(SOURCES) 
+filtertest_SOURCES = $(TESTSOURCES) 
 filtertest_CPPFLAGS = $(AM_CPPFLAGS)
 
 
