--- a/dune/fem/fluxes/Makefile.am
+++ b/dune/fem/fluxes/Makefile.am
@@ -1,3 +1,3 @@
 fluxesdir = $(top_srcdir)/dune/fem/fluxes
-fluxes_HEADERS = averageflux.hh eulerfluxes.hh  ldgflux.hh ldgfluxtheta.hh 
+fluxes_HEADERS = averageflux.hh eulerfluxes.hh newfluxes.hh ldgflux.hh ldgfluxtheta.hh 
 include $(top_srcdir)/am/global-rules
