--- a/src/problems/allencahn/Makefile.am
+++ b/src/problems/allencahn/Makefile.am
@@ -13,9 +13,9 @@ SOURCES = $(BASEDIR)/phasefield.cc
 
 #GRIDTYPE = ALUGRID_CONFORM
 #GRIDTYPE = ALUGRID_SIMPLEX
-GRIDTYPE = ONEDGRID
+GRIDTYPE = SPGRID 
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM =  1 
+GRIDDIM =  2 
 POLORDER = 2 
 USEJACOBIAN = 1 
 AC=1
