--- a/src/problems/allencahn/Makefile.in
+++ b/src/problems/allencahn/Makefile.in
@@ -103,8 +103,8 @@ DIST_COMMON = $(allencahn_HEADERS) $(srcdir)/Makefile.am \
 	$(top_srcdir)/am/headercheck $(top_srcdir)/am/sourcescheck
 subdir = src/problems/allencahn
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/dune-phasefield.m4 \
-	$(top_srcdir)/dependencies.m4 $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/dependencies.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -244,6 +244,9 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BGQ_L1PREFETCH_CPPFLAGS = @BGQ_L1PREFETCH_CPPFLAGS@
+BGQ_L1PREFETCH_LDFLAGS = @BGQ_L1PREFETCH_LDFLAGS@
+BGQ_L1PREFETCH_LIBS = @BGQ_L1PREFETCH_LIBS@
 BIBTEX = @BIBTEX@
 BLAS_LIBS = @BLAS_LIBS@
 BOOST_CPPFLAGS = @BOOST_CPPFLAGS@
@@ -375,12 +378,12 @@ GRAPE_LDFLAGS = @GRAPE_LDFLAGS@
 GRAPE_LIBS = @GRAPE_LIBS@
 GREP = @GREP@
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM = 1 
+GRIDDIM = 2 
 GRIDDIM_CPPFLAGS = @GRIDDIM_CPPFLAGS@
 
 #GRIDTYPE = ALUGRID_CONFORM
 #GRIDTYPE = ALUGRID_SIMPLEX
-GRIDTYPE = ONEDGRID
+GRIDTYPE = SPGRID 
 INKSCAPE = @INKSCAPE@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
