--- a/dune/fem/operator/Makefile.in
+++ b/dune/fem/operator/Makefile.in
@@ -211,6 +211,9 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BGQ_L1PREFETCH_CPPFLAGS = @BGQ_L1PREFETCH_CPPFLAGS@
+BGQ_L1PREFETCH_LDFLAGS = @BGQ_L1PREFETCH_LDFLAGS@
+BGQ_L1PREFETCH_LIBS = @BGQ_L1PREFETCH_LIBS@
 BIBTEX = @BIBTEX@
 BLAS_LIBS = @BLAS_LIBS@
 BOOST_CPPFLAGS = @BOOST_CPPFLAGS@
@@ -382,9 +385,9 @@ PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
-PARDG_CPPFLAGS = @PARDG_CPPFLAGS@
-PARDG_LDFLAGS = @PARDG_LDFLAGS@
-PARDG_LIBS = @PARDG_LIBS@
+PAPI_CPPFLAGS = @PAPI_CPPFLAGS@
+PAPI_LDFLAGS = @PAPI_LDFLAGS@
+PAPI_LIBS = @PAPI_LIBS@
 PARDISO_LIBS = @PARDISO_LIBS@
 PARMETIS = @PARMETIS@
 PARMETIS_CPPFLAGS = @PARMETIS_CPPFLAGS@
@@ -493,8 +496,19 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 operatordir = $(top_srcdir)/dune/fem/operator
-operator_HEADERS = defaultmodel.hh discretemodelcommon.hh fluxdiscretemodel.hh fluxoperator.hh fluxprojdiscretemodel.hh \
-fluxprojoperator.hh  projectiodiscretemodelcommon.hh wellbalancedoperator.hh
+operator_HEADERS = discretemodelcommon.hh \
+										explicitwbdiscretemodel.hh \
+										fluxdiscretemodel.hh \
+										fluxoperator.hh \
+										fluxprojdiscretemodel.hh \
+										fluxprojoperator.hh \
+										gradientdiscretemodel.hh \
+										impclicitwbdiscretemodel.hh \
+										projectiodiscretemodelcommon.hh \
+										thetadiscretemodel.hh \
+										wbsplitoperator \
+										wellbalanceddiscretemodel.hh \
+										wellbalancedoperator.hh 
 
 sourcescheck_IGNORE = aclocal.m4 dependencies.m4
 sourcescheck_LIST = $(SOURCES) $(DIST_SOURCES) $(HEADERS) $(DIST_HEADERS) \
