completed header list

--- a/dune/fem/operator/Makefile.am
+++ b/dune/fem/operator/Makefile.am
@@ -1,4 +1,15 @@
 operatordir = $(top_srcdir)/dune/fem/operator
-operator_HEADERS =  defaultmodel.hh discretemodelcommon.hh fluxdiscretemodel.hh fluxoperator.hh fluxprojdiscretemodel.hh \
-fluxprojoperator.hh  projectiodiscretemodelcommon.hh wellbalancedoperator.hh
+operator_HEADERS =	discretemodelcommon.hh \
+										explicitwbdiscretemodel.hh \
+										fluxdiscretemodel.hh \
+										fluxoperator.hh \
+										fluxprojdiscretemodel.hh \
+										fluxprojoperator.hh \
+										gradientdiscretemodel.hh \
+										impclicitwbdiscretemodel.hh \
+										projectiodiscretemodelcommon.hh \
+										thetadiscretemodel.hh \
+										wbsplitoperator \
+										wellbalanceddiscretemodel.hh \
+										wellbalancedoperator.hh 
 include $(top_srcdir)/am/global-rules
