corrected header list

--- a/dune/phasefield/Makefile.am
+++ b/dune/phasefield/Makefile.am
@@ -1,5 +1,5 @@
 include $(top_srcdir)/am/global-rules
 
 phasefieldincludedir = $(includedir)/dune/phasefield
-phasefieldinclude_HEADERS = phasefield.hh algorithmtraits.hh phasefieldalgorithm.hh
+phasefieldinclude_HEADERS =  algorithmtraits.hh phasefieldalgorithm.hh assembledalgorithm.hh
 
