--- a/dune/phasefield/modelling/Makefile.am
+++ b/dune/phasefield/modelling/Makefile.am
@@ -1,3 +1,3 @@
 modelingdir = $(includedir)/dune/phasefield/modeling
-modeling_HEADERS = physics.hh physics_inline.hh thermodynamics.hh wellbalancedmodel.hh physicswb_inline1d.hh physicswb_inline2d.hh
+modeling_HEADERS = physics.hh physics_inline.hh thermodynamics.hh wellbalancedmodel.hh physicswb_inline1d.hh physicswb2_inline1d.hh hysicswb_inline2d.hh
 include $(top_srcdir)/am/global-rules
