--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -259,6 +259,9 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BGQ_L1PREFETCH_CPPFLAGS = @BGQ_L1PREFETCH_CPPFLAGS@
+BGQ_L1PREFETCH_LDFLAGS = @BGQ_L1PREFETCH_LDFLAGS@
+BGQ_L1PREFETCH_LIBS = @BGQ_L1PREFETCH_LIBS@
 BIBTEX = @BIBTEX@
 BLAS_LIBS = @BLAS_LIBS@
 BOOST_CPPFLAGS = @BOOST_CPPFLAGS@
@@ -430,9 +433,9 @@ PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
-PARDG_CPPFLAGS = @PARDG_CPPFLAGS@
-PARDG_LDFLAGS = @PARDG_LDFLAGS@
-PARDG_LIBS = @PARDG_LIBS@
+PAPI_CPPFLAGS = @PAPI_CPPFLAGS@
+PAPI_LDFLAGS = @PAPI_LDFLAGS@
+PAPI_LIBS = @PAPI_LIBS@
 PARDISO_LIBS = @PARDISO_LIBS@
 PARMETIS = @PARMETIS@
 PARMETIS_CPPFLAGS = @PARMETIS_CPPFLAGS@
