--- a/src/problems/1dphase/Makefile.am
+++ b/src/problems/1dphase/Makefile.am
@@ -9,17 +9,19 @@ LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS) $(LOCAL_LIBS) $(DUNEMPILDFLAGS) $(DUN
 
 BASEDIR=../../../dune/fem/main
 
-SOURCES = $(BASEDIR)/phasefield.cc $(BASEDIR)/phasefield_pol.cc
+SOURCES = $(BASEDIR)/phasefield.cc
+#SOURCES = $(BASEDIR)/phasefield.cc $(BASEDIR)/phasefield_pol.cc
 
-#GRIDTYPE = ALUGRID_CUBE
+
+#GRIDTYPE = ALUGRID_CONFORM
 #GRIDTYPE = ALUGRID_SIMPLEX
-GRIDTYPE = SPGRID
+GRIDTYPE = SPGRID 
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM = 2
-POLORDER = 2 
+GRIDDIM =  2 
+POLORDER = 0 
 USEJACOBIAN = 0
 
-PROBLEM = 1 # check ./problemtype.hh
+PROBLEM = 4 # check ./problemtype.hh
 FLUX = 1 # check ./problemcreator.hh
 
 AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) \
@@ -27,29 +29,23 @@ AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$
               -DFLUX=$(FLUX) -DDUALDG # -DWBPROBLEM -DWELLBALANCE
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 
-check_PROGRAMS = phasefield phasefield_P0 phasefield_nc phasefield_nctheta phasefield_nc_jac phasefield2d phasefield2dnc
+check_PROGRAMS = phasefield  phasefield_nc phasefield_nctr
 phasefield_SOURCES = $(SOURCES) 
 phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMYALGO -DMASTER -DPROJECT 
 
-phasefield_P0_SOURCES = $(SOURCES) 
-phasefield_P0_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=0 -DMYALGO -DMASTER 
 
 
 phasefield_nc_SOURCES = $(SOURCES) 
-phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DMYALGO -DMASTER 
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=0 -DWELLBALANCED -DMYALGO -DMASTER 
 
-phasefield_nctheta_SOURCES = $(SOURCES) 
-phasefield_nctheta_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=0 -DWELLBALANCED -DMYALGO -DMASTER -DTHETASOURCE
+phasefield_nctr_SOURCES = $(SOURCES) 
+phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DMYALGO -DMASTER -DNONCONTRANS 
 
 
-phasefield_nc_jac_SOURCES = $(SOURCES) 
-phasefield_nc_jac_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=$(USEJACOBIAN) -DWELLBALANCED -DMYALGO -DMASTER
 
-phasefield2d_SOURCES = $(SOURCES) 
-phasefield2d_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DGRIDDIM=2 -DMYALGO -DMASTER 
 
-phasefield2dnc_SOURCES = $(SOURCES) 
-phasefield2dnc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DGRIDDIM=2 -DWELLBALANCED -DMYALGO -DMASTER 
+
+
 
 
 
