--- a/src/problems/macrogrids/Makefile.am
+++ b/src/problems/macrogrids/Makefile.am
@@ -1,9 +1,4 @@
 # install these headers 
-macrogridsdir=$(includedir)/src/problems/poisson/
+macrogridsdir=$(includedir)/src/problems/macrogrids
 
-check_PROGRAMS=straka
-straka_SOURCES=straka.cc
-straka_CPPFLAGS=-Wall
-
-macrogrids_HEADERS=
 include $(top_srcdir)/am/global-rules
