--- a/src/problems/Makefile.am
+++ b/src/problems/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = 1dphase allencahn macrogrids mixedscheme parameter
+SUBDIRS = 1dphase allencahn mixedscheme 
 
 include $(top_srcdir)/am/global-rules
