--- a/src/problems/mixedscheme/Makefile.am
+++ b/src/problems/mixedscheme/Makefile.am
@@ -1,7 +1,6 @@
 # install these headers
 phasedir=$(includedir)/src/problems/phase
-phase_HEADERS= phase_model.hh problemcreator.hh phasewaves.hh \
-phase_model_spec.hh problemtype.hh
+#phase_HEADERS= problemtype.hh
 
 #USE_OMP=-fopenmp
 
