removed old flags

--- a/src/problems/allencahn/Makefile.am
+++ b/src/problems/allencahn/Makefile.am
@@ -29,7 +29,7 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 
 check_PROGRAMS = allencahn
 allencahn_SOURCES = $(SOURCES) 
-allencahn_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)  -DAC=$(AC) -DMYALGO
+allencahn_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)  -DAC=$(AC) 
 
 
 
