--- a/src/problems/passscheme/Makefile.am
+++ b/src/problems/passscheme/Makefile.am
@@ -16,11 +16,11 @@ SOURCES = $(BASEDIR)/phasefield.cc
 #GRIDTYPE = ALUGRID_SIMPLEX
 GRIDTYPE = SPGRID 
 #GRIDTYPE = ALBERTAGRID
-GRIDDIM =  2 
-POLORDER = 1 
+GRIDDIM =  1 
+POLORDER = 2 
 USEJACOBIAN = 1 
 
-PROBLEM = 8 # check ./problemtype.hh
+PROBLEM = 7 # check ./problemtype.hh
 FLUX = 1 # check ./problemcreator.hh
 
 AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) \
@@ -30,13 +30,13 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 
 check_PROGRAMS = phasefield  phasefield_nc phasefield_nctr
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMYALGO -DMASTER -DPROJECT 
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)  R -DPROJECT 
 
 phasefield_nc_SOURCES = $(SOURCES) 
-phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=0 -DWELLBALANCED -DMYALGO -DMASTER 
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  
 
 phasefield_nctr_SOURCES = $(SOURCES) 
-phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DMYALGO -DMASTER -DNONCONTRANS 
+phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  -DNONCONTRANS 
 
 
 
